# fastapi-babel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  contributing.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
examples/: full.py
examples/test1/: babel.cfg  babel.py  babel_config.py  i18n.py  main.py
examples/test1/fastapi_babel/: __init__.py  core.py  helpers.py  middleware.py
examples/test1/lang/en/LC_MESSAGES/: messages.po
examples/test1/lang/es/LC_MESSAGES/: messages.po
examples/test1/lang/fa/LC_MESSAGES/: messages.mo  messages.po
examples/test1/lang/fr/LC_MESSAGES/: messages.po
examples/with_context/: i18n.py  main.py
examples/with_context/lang/en/LC_MESSAGES/: messages.po
examples/with_context/lang/fa/LC_MESSAGES/: messages.po
examples/with_jinja/: babel.cfg  full.py
examples/with_jinja/lang/de/LC_MESSAGES/: messages.mo  messages.po
examples/with_jinja/lang/en-US/LC_MESSAGES/: messages.mo  messages.po
examples/with_jinja/lang/fa/LC_MESSAGES/: messages.mo  messages.po
examples/with_jinja/templates/: item.html
examples/wtforms/: app.py  babel.cfg  forms.py  i18n.py  routes.py
examples/wtforms/lang/fa/LC_MESSAGES/: messages.po
examples/wtforms/templates/: index.html
fastapi_babel/: __init__.py  cli.py  core.py  exceptions.py  helpers.py  local_context.py  middleware.py  properties.py
tests/: test_concurrent.py
