[metadata]
name = fastapi-babel
version = attr: fastapi_babel.__version__
url = https://github.com/Anbarryprojects/fastapi-babel
project_urls =
    Documentation = https://github.com/Anbarryprojects/fastapi-babel
    Source Code = https://github.com/Anbarryprojects/fastapi-babel
    Issue Tracker = https://github.com/Anbarryprojects/fastapi-babel/issues/
license = MIT
author = Parsa Pourmohammad
author_email = parsapourmohammad1999@gmail.com
maintainer = Anbarryprojects
description = FastAPI-babel is an extenstion for I18n and I10n support in FastAPI, based on babel and pytz.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: FastAPI
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
# package_dir = = fastapi_babel
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = fastapi_babel


[flake8]
max-line-length = 88
per-file-ignores =
    # __init__ exports names
    fastapi_babel/__init__.py: F401

[mypy]
files = fastapi_babel
python_version = 3.7
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
# warn_return_any = True
# warn_unreachable = True

[mypy-click.*]
ignore_missing_imports = True

[mypy-jinja.*]
ignore_missing_imports = True
